# Basis

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  commands.md
cmake/: defaults.cmake  project_tools.cmake
source/: CMakeLists.txt
source/algorithm/graph/: graph.hpp
source/include/: graph.hpp
test/: CMakeLists.txt  directedGraph.cpp  graphTest.cpp  undirectedGraph.cpp
